--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,22 +12,39 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.0.0
   shared_preferences: ^2.0.13
-  syncfusion_flutter_pdfviewer: ^30.0.00
   path: ^1.9.0
-
-
+  flutter_pdfview: ^1.3.1
+  path_provider: ^2.0.15
+  pdfx: ^2.4.0
   cupertino_icons: ^1.0.8
+  google_maps_flutter: ^2.6.0
+  geolocator: ^11.0.0
+  url_launcher: ^6.2.5
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
+  flutter_map_marker_popup: ^6.1.2
+  firebase_core: ^2.30.0
+  firebase_storage: ^11.7.0
+  connectivity_plus: ^6.1.4
+  internet_connection_checker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
-  
   assets:
+    - assets/
     - assets/reportes/
+    - assets/reportes/2025-01/
+    - assets/reportes/2025-02/
+    - assets/reportes/2025-03/
+    - assets/reportes/2025-04/
+    - assets/reportes/2025-05/
+    - assets/reportes/2025-06/
     - assets/reportes/reportes_index.json
+    - assets/distribuidores.json
 
