--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,11 @@ dependencies:
   flutter_map_marker_popup: ^6.1.2
   firebase_core: ^2.30.0
   firebase_storage: ^11.7.0
+  cloud_firestore: ^4.13.5
+  firebase_auth: ^4.17.4
   connectivity_plus: ^6.1.4
   internet_connection_checker: ^1.0.0
+  
 
 dev_dependencies:
   flutter_test:
