--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,36 +7,45 @@ version: 1.0.0+1
 environment:
   sdk: ^3.8.1
 
+
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.0.0
-  shared_preferences: ^2.0.13
+  flutter_riverpod: ^2.5.1
+  shared_preferences: ^2.3.3
   path: ^1.9.0
   flutter_pdfview: ^1.3.1
-  path_provider: ^2.0.15
-  pdfx: ^2.4.0
+  path_provider: ^2.1.3
+  pdfx: ^2.9.2
   cupertino_icons: ^1.0.8
-  google_maps_flutter: ^2.6.0
-  geolocator: ^11.0.0
-  url_launcher: ^6.2.5
+  google_maps_flutter: ^2.9.0
+  geolocator: ^14.0.2
+  url_launcher: ^6.3.1
   flutter_map: ^8.2.0
-  latlong2: ^0.9.0
+  latlong2: ^0.9.1
   flutter_map_marker_popup: ^8.0.1
-  firebase_core: ^2.30.0
-  firebase_storage: ^11.7.0
-  cloud_firestore: ^4.13.5
-  firebase_auth: ^4.17.4
   connectivity_plus: ^6.1.4
-  internet_connection_checker: ^1.0.0
+  internet_connection_checker: ^3.0.1
   flutter_map_animations: ^0.9.0
   flutter_map_tile_caching: ^10.1.1
+
+  # ✅ Firebase actualizado (compatible con web 1.x y Drift)
+  firebase_core: ^3.9.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.1
+  firebase_storage: ^12.3.1
+
+  # ✅ Drift actualizado
+  drift: ^2.28.0
+  drift_flutter: ^0.2.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^6.0.0
+  drift_dev: ^2.28.1-dev.0
+  build_runner: ^2.6.0-dev.1
+
 
 flutter:
   uses-material-design: true
