--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   internet_connection_checker: ^3.0.1
   flutter_map_animations: ^0.9.0
   flutter_map_tile_caching: ^10.1.1
+  supabase_flutter: ^2.9.1
 
   # ✅ Firebase actualizado (compatible con web 1.x y Drift)
   firebase_core: ^3.9.0
