--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_map_animations: ^0.9.0
   flutter_map_tile_caching: ^10.1.1
   supabase_flutter: ^2.9.1
+  dropdown_search: 6.0.2
 
   # ✅ Firebase actualizado (compatible con web 1.x y Drift)
   firebase_core: ^3.9.0
