--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,8 @@ dependencies:
   supabase_flutter: ^2.9.1
   dropdown_search: 6.0.2
   file_picker: 10.2.1
+  pdfrx: ^2.1.3
 
-  # ✅ Firebase actualizado (compatible con web 1.x y Drift)
-  firebase_core: ^3.9.0
-  firebase_auth: ^5.3.1
-  cloud_firestore: ^5.4.1
-  firebase_storage: ^12.3.1
 
   # ✅ Drift actualizado
   drift: ^2.28.0
