--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter_map: ^8.2.0
   latlong2: ^0.9.1
   flutter_map_marker_popup: ^8.0.1
-  connectivity_plus: ^6.1.4
+  connectivity_plus: ^6.1.5
   internet_connection_checker: ^3.0.1
   flutter_map_animations: ^0.9.0
   flutter_map_tile_caching: ^10.1.1
@@ -32,6 +32,12 @@ dependencies:
   dropdown_search: 6.0.2
   file_picker: 10.2.1
   pdfrx: ^2.1.3
+  pdf: ^3.11.3
+  crypto: ^3.0.6
+  flutter_image_compress: ^2.4.0
+  image: ^4.5.4
+  share_plus: ^11.1.0
+  uuid: ^4.5.1
 
 
   # ✅ Drift actualizado
