--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter_map_tile_caching: ^10.1.1
   supabase_flutter: ^2.9.1
   dropdown_search: 6.0.2
-  file_picker: 10.2.1
+  file_picker: ^10.3.2
   pdfrx: ^2.1.3
   pdf: ^3.11.3
   crypto: ^3.0.6
@@ -54,14 +54,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/
-    - assets/reportes/
-    - assets/reportes/2025-01/
-    - assets/reportes/2025-02/
-    - assets/reportes/2025-03/
-    - assets/reportes/2025-04/
-    - assets/reportes/2025-05/
-    - assets/reportes/2025-06/
-    - assets/reportes/reportes_index.json
+
 
