--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   share_plus: ^11.1.0
   uuid: ^4.5.1
   loader_overlay: ^5.0.0
+  flutter_expandable_fab: ^2.5.2
+  csv: ^6.0.0
 
 
   # ✅ Drift actualizado
